syntax = "proto3";
package mails;
option go_package = "github.com/nirajgeorgian/gateway/src/mails/api;api";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
option (gogoproto.goproto_registration) = true;

// --------------- main api --------------------------

// account confirmation (also on reconfirmation)
message AccountConfirmationReq {
	string Username = 1;
	string Email = 2;
	string Message = 3;
	string ConfirmationCode = 4;
}
message ConfirmationRes {
	bool Status = 1;
}

service MailsService {
	rpc SendAccountConfirmation (AccountConfirmationReq) returns (ConfirmationRes) {};
}
