syntax = "proto3";
package account;
option go_package = "github.com/nirajgeorgian/gateway/src/models;models";

import "github.com/infobloxopen/protoc-gen-gorm/options/gorm.proto";
import "google/protobuf/timestamp.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.goproto_registration) = true;

message Account {
  option (gorm.opts).ormable = true;

  string account_id = 1 [(gorm.field).tag = { primary_key: true }];
  string username = 2 [(gorm.field).tag = { type: "varchar(120)" }];
  string email = 3 [(gorm.field).tag = { type: "varchar(120)" }];
  string password_hash = 4 [(gorm.field).tag = { type: "varchar(120)" }];
  string password_salt = 5;
  string description = 6 [(gorm.field).tag = { type: "varchar(512)" }];
  bool verified = 7 [(gorm.field).tag = { type: "boolean"}];

  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

// --------------- job model ----------------
message Sallary {
  option (gorm.opts).ormable = true;

  fixed64 value = 1;
  string currency = 2;
}
message Attachment {
  option (gorm.opts).ormable = true;

  string type = 1;
  string value = 2;
  google.protobuf.Timestamp created_at = 3;
}

message Job {
  option (gorm.opts).ormable = true;

  string job_id = 1 [(gorm.field).tag = { primary_key: true }];
  string job_name = 2 [(gorm.field).tag = { type: "varchar(512)" }];
  string job_description = 3 [(gorm.field).tag = { type: "varchar(512)" }];
  string job_category = 4;
  string location = 5;
  int64 views = 6;

  repeated string job_tag = 7;
  repeated string skills_required = 8;
  repeated string users_applied = 9 [(gorm.field).tag = {type: "uuid"}];
  repeated Attachment job_attachment = 10;

  enum JobType {
    DEFAULT = 0;
    FEATURED = 1;
    PREMIUM = 2;
  }
  JobType job_type = 11;

  enum JobStatus {
    ACTIVE = 0;
    HOLD = 1;
    EXPIRED = 2;
    CLOSED = 3;
    URGENT = 4;
  }
  JobStatus job_status = 12;

  Sallary min_sallary = 13;
  Sallary max_sallary = 14;

  google.protobuf.Timestamp created_at = 15;
  google.protobuf.Timestamp updated_at = 16;
}
